syntax = "proto3";
package common;

// TODO what package should this live in?

option go_package = "github.com/Layr-Labs/eigenda/api/grpc/validator";

// Records information about validator signing rate during a time period.
message ValidatorSigningRate {

  // The unique identifier of the validator (i.e. the operator ID).
  bytes id = 1;

  // The number of signed by the validator during the period.
  uint64 signed_batches = 2;

  // The number of unsigned by the validator during the period.
  uint64 unsigned_batches = 3;

  // The total number of bytes signed during the period.
  uint64 signed_bytes = 4;

  // The total number of bytes unsigned during the period.
  uint64 unsigned_bytes = 5;

  // Contains the sum of the time spent by the validator waiting for signing requests to be processed, in nanoseconds.
  // Only batches that are signed are considered (i.e. if the validator does not succeed in signing a batch,
  // the time spend in the attempt is not counted).
  uint64 signing_latency = 6;
}

// Signing rate information about validators during a particular time bucket.
message SigningRateBucket {

  // The start time of the bucket in seconds since Unix epoch, inclusive.
  uint64 start_timestamp = 1;

  // The end time of the bucket in seconds since Unix epoch, exclusive.
  uint64 end_timestamp = 2;

  // The signing rates of individual validators during the bucket period.
  repeated ValidatorSigningRate validator_signing_rates = 3;
}